--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<div class="container">
-  <app-proveedores></app-proveedores>
-</div>
+<!--<div class="container">-->
+<!--  <app-proveedores></app-proveedores>-->
+<!--</div>-->
 
