--- a/src/app/presupuestos/addpres/addpres.component.html
+++ b/src/app/presupuestos/addpres/addpres.component.html
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset 2">
     <h2>Añadir nuevo presupuesto</h2>
+    <a class="btn btn-primary float-md-right"
+       routerLink="/presupuestos">Regresar al listado</a>
+    <br>
     <form [formGroup]="presupuestoForm"  (ngSubmit)="onSubmit()" >
       <div class="form-group">
         <label for="proveedor">Proveedor</label>
@@ -66,7 +69,9 @@
       </div>
       <button type="submit"
               class="btn btn-primary"
-              [disabled]="!presupuestoForm.valid">Añadir Presupuesto</button>
+              [disabled]="!presupuestoForm.valid"
+      >Añadir Presupuesto</button>
+      <a class="btn btn-danger" routerLink="/presupuestos">Cancelar</a>
       <p class="alert alert-danger" *ngIf="!presupuestoForm.valid">
         Por favor complete todos los campos
       </p>
